Bug 185177 - Searches are not updated when changes are made to the resulting image set
Summary: Searches are not updated when changes are made to the resulting image set
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Searches-Engine (other bugs)
Version First Reported In: 1.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-21 23:02 UTC by Andi Clemens
Modified: 2012-06-27 11:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2009-02-21 23:02:30 UTC
Version:           0.11.0-svn (using 4.2.00 (KDE 4.2.0), Arch Linux)
Compiler:          gcc
OS:                Linux (i686) release 2.6.28-ARCH

When I open a saved search and change the status of images in the result set, the search view i not updated.
For example a search that displays all images rated with 5 stars delivers 100 images. Now I select 10 of them and set the rating to 1. The view is not updated, there are still 100 images visible (including the 10 with no rating).
This worked fine in digiKam 0.9.x, we seem to have a regression here.

Andi
Comment 1 Andi Clemens 2009-02-21 23:04:10 UTC
This report is valid for 0.10.0, too...
Comment 2 Marcel Wiesweg 2009-04-12 22:46:48 UTC
SVN commit 952915 by mwiesweg:

Schedule a refresh of the listing if the current album is a search and any of
the contained images is affected.

BUG: 185177

 M  +28 -1     albumlister.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=952915
Comment 3 Michael Liddle 2009-06-09 20:31:59 UTC
Does this fix also apply to when the current view is selected by the tag tree? (Doesn't work using 0.10)