Schedule a refresh of the listing if the current album is a search and any of the contained images is affected.

BUG: 185177

svn path=/trunk/extragear/graphics/digikam/; revision=952915